--- a/src/Pages/Dashboard/index.html
+++ b/src/Pages/Dashboard/index.html
@@ -1,198 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moview</title>
-    <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon" />
-    <!--bootstrap 5.0-->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://kit.fontawesome.com/bb41ae50aa.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="../../jquery/jquery-3.5.1.min.js"></script>
-    <script src="js/request.js"></script>
-    <script src="js/resquestTV.js"></script>
-    <script src="js/components/searchInput.js"></script>
-    <script src="js/components/scrollButton.js"></script>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Moview</title>
+  <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" href="styles/index.css" />
-    <link rel="stylesheet" href="../../styles/root/navbar.css" />
+  <!-- Bootstrap 5 -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" />
 
-    <script>
-      $(document).ready(function () {
-        setTimeout(function(){
-            $(".loading").addClass("hide");
-            $("body").removeClass("scroll-hidden");
-        },1000)
-    });
-    </script>
+  <!-- FontAwesome -->
+  <script src="https://kit.fontawesome.com/bb41ae50aa.js" crossorigin="anonymous"></script>
 
-  </head>
+  <!-- jQuery -->
+  <script src="../../jquery/jquery-3.5.1.min.js"></script>
 
-  <body class="scroll-hidden">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="styles/index.css" />
 
-    <div class="navbar-top">
-      <div class="logo_netflix">
-        <img src="../../assets/logo/logo-netflix.png" alt="" />
-        <div class="left_item_nav">
-          <a href="#" class="links_hover">
-            <span>Home</span>
-          </a>
-          <a href="Pages/Discovery/index.html?page=1" class="links_hover">
-            <span>Series</span>
-          </a>
-          <a href="Pages/Discovery/index.html?page=2" class="links_hover">
-            <span>Films</span>
-          </a>
-          <a href="Pages/Recents/index.html?page=recents" class="links_hover">
-            <span>Recents</span>
-          </a>
-          <a href="Pages/MyList/index.html?page=favorites" class="links_hover">
-            <span>My List</span>
-          </a>
-        </div>
-      </div>
+</head>
+<body>
 
-      <div class="right_item_nav">
-        <a id="show_field_search">
-          <span id="search_area">
-            <input
-              type="search"
-              id="search_input"
-              class="search_input hidden"
-              placeholder="Buscar"
-            />
-            <i class="fas fa-search search_icon"></i>
-          </span>
-        </a>
-
-        <a href="Pages/Kids/index.html" class="links_hover">
-          <span>INFANTIL</span>
-        </a>
-
-        <a href="#" class="links_hover">
-          <span>
-            <i class="fas fa-gift"></i>
-          </span>
-        </a>
-        <a href="#" class="links_hover">
-          <span>
-            <i class="fas fa-bell"></i>
-            <sup class="notification_tot"></sup>
-          </span>
-        </a>
-
-        <div class="account_icon">
-          <img
-            src="../../assets/dashboard/account_icons/the_witcher_henry_cavil.png"
-            alt=""
-          />
-          <span id="user-email" style="color:#fff; margin-left:10px;"></span>
-          <div class="dropdown">
-            <button
-              class="btn btn-secondary dropdown-toggle bg-transparent btn_drop"
-              type="button"
-              id="dropdownMenuButton1"
-              data-bs-toggle="dropdown"
-              aria-expanded="false"
-            ></button>
-            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-              <li>
-                <a class="dropdown-item" href="Pages/MyList/index.html"
-                  >My List</a
-                >
-              </li>
-              <li><a class="dropdown-item" href="../../Pages/Dashboard/Pages/Settings/index.html">Settings</a></li>
-              <li>
-                <a class="dropdown-item" href="../../Pages/Login/index.html"> Exit </a>
-              </li>
-            </ul>
-          </div>
-        </div>
+  <!-- Navbar -->
+  <div class="navbar-top d-flex justify-content-between align-items-center px-3 py-2">
+    <div class="d-flex align-items-center">
+      <img src="../../assets/logo/logo-netflix.png" alt="Logo" class="logo-img" />
+      <div class="ms-3 navbar-links d-flex gap-3">
+        <a href="#">Home</a>
+        <a href="Pages/Discovery/index.html?page=1">Series</a>
+        <a href="Pages/Discovery/index.html?page=2">Films</a>
+        <a href="Pages/Recents/index.html?page=recents">Recents</a>
+        <a href="Pages/MyList/index.html?page=favorites">My List</a>
       </div>
     </div>
-
-    <main >
-    
-      <div class="loading">
-        <div class="spinner-border text-danger" role="status">
-          <span class="visually-hidden">Loading...</span>
-        </div>
+    <div class="d-flex align-items-center gap-3">
+      <a href="Pages/Kids/index.html">INFANTIL</a>
+      <a href="#"><i class="fas fa-gift"></i></a>
+      <a href="#"><i class="fas fa-bell"></i><sup class="notification_tot"></sup></a>
+      <div class="account_icon d-flex align-items-center gap-2">
+        <img src="../../assets/dashboard/account_icons/the_witcher_henry_cavil.png" alt="User" class="account-img"/>
+        <span id="user-email"></span>
       </div>
+    </div>
+  </div>
 
-      <a href="Pages/Browser/index.html"></a>
-      <div class="home-page-dashboard">
-        <img src="../../assets/dashboard/heroimage.png" alt="" />
-      </div>
-      <span class="name"> DARK </span>
-      <span class="info"> 2017 | 16 | 3 Season | Police Serie </span>
-      <span class="sinopse_movie_landing">
-        Four families embark on a desperate search for answers when a son disappears amid a mystery involving three generations.
-      </span>
+  <!-- Hero Section -->
+  <section class="hero position-relative">
+    <img src="../../assets/dashboard/heroimage.png" alt="Hero Image" class="hero-img" />
+    <div class="hero-content">
+      <h1 class="hero-title">DARK</h1>
+      <p class="hero-info">2017 | 16 | 3 Season | Police Serie</p>
+      <p class="hero-sinopse">Four families embark on a desperate search for answers when a son disappears amid a mystery involving three generations.</p>
       <a href="Pages/MediaDetails/index.html?id=70523&type=tv">
-        <button class="btn_play" id="btn_play">
-          <i class="fas fa-play"></i> &nbsp; Join
-        </button>
+        <button class="btn_play"><i class="fas fa-play"></i> Join</button>
       </a>
-      <img src="../../../src/assets/dashboard/serie_icon.png" class="img_serie_name" />
-  
-      <div class="more_movies">
-        <div class="row_01_popular">
-          <h1 class="title_second_row">Popular Series</h1>
-  
-          <div class="buttons_tv_scroll">
-            <button id="button_scroll_left_01" class="button_scroll_left_01">
-              <i class="fas fa-chevron-left"></i>
-            </button>
-            <button id="button_scroll_right_01" class="button_scroll_right_01">
-              <i class="fas fa-chevron-right"></i>
-            </button>
-          </div>
-  
-          <div class="tv01">
-            <ul class="row01_tv_popular" id="row01_tv_popular">
-              <!--Os Filme Vão Aqui-->
-            </ul>
-          </div>
-        </div>
-        <div class="row_02_popular">
-          <h1 class="title_second_row">Recent Films</h1>
-  
-          <div class="buttons_movies_scroll">
-            <button id="button_scroll_left_02" class="button_scroll_left_02">
-              <i class="fas fa-chevron-left"></i>
-            </button>
-            <button id="button_scroll_right_02" class="button_scroll_right_02">
-              <i class="fas fa-chevron-right"></i>
-            </button>
-          </div>
-  
-          <div class="movies02">
-            <ul class="row02_movies_popular" id="row02_movies_popular">
-              <!--Os Filme Vão Aqui-->
-            </ul>
-          </div>
-        </div>
-      </div>
-  
-    </main>
+    </div>
+  </section>
 
-    <script type="module" src="../../../firebase.js"></script>
-    <script type="module" src="../../Pages/Dashboard/js/authsession.js"></script>
+  <!-- Popular Series -->
+  <section class="movie-section">
+    <h2>Popular Series</h2>
+    <div class="movie-row">
+      <button class="scroll-btn left"><i class="fas fa-chevron-left"></i></button>
+      <ul class="row01_tv_popular d-flex overflow-auto gap-2">
+        <!-- Series inserted dynamically -->
+      </ul>
+      <button class="scroll-btn right"><i class="fas fa-chevron-right"></i></button>
+    </div>
+  </section>
 
-    </body>
-     
+  <!-- Recent Films -->
+  <section class="movie-section">
+    <h2>Recent Films</h2>
+    <div class="movie-row">
+      <button class="scroll-btn left"><i class="fas fa-chevron-left"></i></button>
+      <ul class="row02_movies_popular d-flex overflow-auto gap-2">
+        <!-- Films inserted dynamically -->
+      </ul>
+      <button class="scroll-btn right"><i class="fas fa-chevron-right"></i></button>
+    </div>
+  </section>
+
+  <!-- Loading -->
+  <div class="loading d-flex justify-content-center align-items-center">
+    <div class="spinner-border text-danger" role="status"></div>
+  </div>
+
+  <!-- Scripts -->
+  <script src="js/request.js"></script>
+  <script src="js/resquestTV.js"></script>
+  <script src="js/components/searchInput.js"></script>
+  <script src="js/components/scrollButton.js"></script>
+
+</body>
 </html>
