--- a/src/Pages/Dashboard/index.html
+++ b/src/Pages/Dashboard/index.html
@@ -1,177 +1,173 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Moview</title>
-    <link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon" />
-    <!-- Bootstrap 5 -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://kit.fontawesome.com/bb41ae50aa.js" crossorigin="anonymous"></script>
-    <script src="../../jquery/jquery-3.5.1.min.js"></script>
+<meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Moview</title>
+<link rel="shortcut icon" href="../../../favicon.ico" type="image/x-icon" />
+<!-- Bootstrap 5 -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/bb41ae50aa.js" crossorigin="anonymous"></script>
+<script src="../../jquery/jquery-3.5.1.min.js"></script>
 
-    <!-- Estilos propios -->
-    <link rel="stylesheet" href="styles/index.css" />
-    <link rel="stylesheet" href="../../styles/root/navbar.css" />
+<style>
+/* GENERAL */
+body, html { margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; background-color: #000; }
+a { text-decoration: none; color: inherit; }
 
-    <style>
-        /* Spinner */
-        .loading {
-            width: 100%;
-            height: 100%;
-            background-color: black;
-            position: fixed;
-            top: 0;
-            left: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-        }
+/* LOADING SPINNER */
+.loading {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+}
+.hide { display: none; }
+.scroll-hidden { overflow: hidden; }
 
-        .hide {
-            display: none;
-        }
+/* NAVBAR */
+.navbar-top { display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; position: sticky; top: 0; background-color: rgba(0,0,0,0.85); z-index: 1000; }
+.navbar-top img { height: 40px; }
+.left_item_nav a { margin: 0 10px; color: #fff; font-weight: 500; }
+.right_item_nav a { margin-left: 15px; color: #fff; }
 
-        .scroll-hidden {
-            overflow: hidden;
-        }
+/* HERO */
+.home-page-dashboard { width: 100%; position: relative; }
+.home-page-dashboard img { width: 100%; height: auto; object-fit: cover; }
 
-        /* Responsive ajustes básicos para home */
-        .home-page-dashboard img {
-            width: 100%;
-            height: auto;
-        }
+/* HERO TEXT */
+.hero-text {
+    position: absolute;
+    left: 5%;
+    top: 25%;
+    max-width: 600px;
+    color: #fff;
+}
+.hero-text .name { font-size: 2.2rem; font-weight: 600; margin-bottom: 10px; }
+.hero-text .info { font-size: 1.2rem; margin-bottom: 15px; }
+.hero-text .sinopse_movie_landing { font-size: 1rem; margin-bottom: 20px; }
+.hero-text .btn_play { background-color: #fff; color: #000; border: none; padding: 10px 20px; font-size: 1rem; border-radius: 5px; cursor: pointer; transition: 0.2s; }
+.hero-text .btn_play:hover { filter: brightness(0.8); }
+.hero-text .img_serie_name { width: 40%; margin-top: 20px; }
 
-        .name, .info, .sinopse_movie_landing, .btn_play, .img_serie_name {
-            position: absolute;
-            color: #fff;
-            margin-left: 28px;
-        }
+/* MORE MOVIES / SERIES ROWS */
+.more_movies { padding: 30px 10px; background-color: #000; }
 
-        @media (max-width: 768px) {
-            .name { margin-top: 120px; font-size: 16px; }
-            .info { margin-top: 160px; font-size: 14px; }
-            .sinopse_movie_landing { margin-top: 200px; width: 90%; font-size: 14px; }
-            .btn_play { margin-top: 300px; width: 120px; height: 35px; }
-            .img_serie_name { width: 50%; margin-top: 40px; }
-        }
+.more_movies h2 { color: #fff; margin-bottom: 10px; font-size: 1.5rem; }
 
-        @media (max-width: 480px) {
-            .name { margin-top: 100px; font-size: 14px; }
-            .info { margin-top: 140px; font-size: 12px; }
-            .sinopse_movie_landing { margin-top: 180px; width: 90%; font-size: 12px; }
-            .btn_play { margin-top: 260px; width: 100px; height: 30px; }
-            .img_serie_name { width: 60%; margin-top: 30px; }
-        }
-    </style>
+.row_movies {
+    display: flex;
+    overflow-x: auto;
+    scroll-behavior: smooth;
+    padding-bottom: 15px;
+}
+.row_movies::-webkit-scrollbar { height: 8px; }
+.row_movies::-webkit-scrollbar-thumb { background: #ff1e00; border-radius: 5px; }
+.row_movies::-webkit-scrollbar-track { background: #333; }
+
+.row_movies li { flex: 0 0 auto; margin-right: 10px; list-style: none; transition: 0.2s; }
+.row_movies li img { width: 200px; height: auto; border-radius: 5px; transition: transform 0.2s; }
+.row_movies li img:hover { transform: scale(1.1); }
+
+/* RESPONSIVE */
+@media (max-width: 1024px) {
+    .hero-text { top: 20%; max-width: 500px; }
+    .hero-text .name { font-size: 1.8rem; }
+    .hero-text .info { font-size: 1.1rem; }
+    .hero-text .sinopse_movie_landing { font-size: 0.95rem; }
+    .hero-text .btn_play { font-size: 0.9rem; padding: 8px 16px; }
+    .hero-text .img_serie_name { width: 45%; }
+}
+
+@media (max-width: 768px) {
+    .hero-text { top: 15%; max-width: 90%; left: 5%; }
+    .hero-text .name { font-size: 1.5rem; }
+    .hero-text .info { font-size: 1rem; }
+    .hero-text .sinopse_movie_landing { font-size: 0.9rem; }
+    .hero-text .btn_play { font-size: 0.85rem; padding: 7px 14px; }
+    .hero-text .img_serie_name { width: 50%; }
+    .row_movies li img { width: 150px; }
+}
+
+@media (max-width: 480px) {
+    .hero-text { top: 12%; left: 5%; }
+    .hero-text .name { font-size: 1.2rem; }
+    .hero-text .info { font-size: 0.9rem; }
+    .hero-text .sinopse_movie_landing { font-size: 0.8rem; }
+    .hero-text .btn_play { font-size: 0.8rem; padding: 6px 12px; }
+    .hero-text .img_serie_name { width: 60%; }
+    .row_movies li img { width: 120px; }
+}
+</style>
 </head>
-
 <body class="scroll-hidden">
-    <!-- Spinner -->
-    <div class="loading">
-        <div class="spinner-border text-danger" role="status">
-            <span class="visually-hidden">Loading...</span>
+
+<!-- LOADER -->
+<div class="loading">
+    <div class="spinner-border text-danger" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+</div>
+
+<!-- NAVBAR -->
+<div class="navbar-top">
+    <div class="logo_netflix">
+        <img src="../../assets/logo/logo-netflix.png" alt="" />
+        <div class="left_item_nav">
+            <a href="#">Home</a>
+            <a href="Pages/Discovery/index.html?page=1">Series</a>
+            <a href="Pages/Discovery/index.html?page=2">Films</a>
+            <a href="Pages/Recents/index.html?page=recents">Recents</a>
+            <a href="Pages/MyList/index.html?page=favorites">My List</a>
         </div>
     </div>
-
-    <!-- Navbar -->
-    <div class="navbar-top">
-        <div class="logo_netflix">
-            <img src="../../assets/logo/logo-netflix.png" alt="" />
-            <div class="left_item_nav">
-                <a href="#" class="links_hover"><span>Home</span></a>
-                <a href="Pages/Discovery/index.html?page=1" class="links_hover"><span>Series</span></a>
-                <a href="Pages/Discovery/index.html?page=2" class="links_hover"><span>Films</span></a>
-                <a href="Pages/Recents/index.html?page=recents" class="links_hover"><span>Recents</span></a>
-                <a href="Pages/MyList/index.html?page=favorites" class="links_hover"><span>My List</span></a>
-            </div>
-        </div>
-        <div class="right_item_nav">
-            <a id="show_field_search">
-                <span id="search_area">
-                    <input type="search" id="search_input" class="search_input hidden" placeholder="Buscar" />
-                    <i class="fas fa-search search_icon"></i>
-                </span>
-            </a>
-            <a href="Pages/Kids/index.html" class="links_hover"><span>INFANTIL</span></a>
-            <a href="#" class="links_hover"><span><i class="fas fa-gift"></i></span></a>
-            <a href="#" class="links_hover"><span><i class="fas fa-bell"></i><sup class="notification_tot"></sup></span></a>
-            <div class="account_icon">
-                <img src="../../assets/dashboard/account_icons/the_witcher_henry_cavil.png" alt="" />
-                <span id="user-email" style="color:#fff; margin-left:10px;"></span>
-                <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle bg-transparent btn_drop" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false"></button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                        <li><a class="dropdown-item" href="Pages/MyList/index.html">My List</a></li>
-                        <li><a class="dropdown-item" href="../../Pages/Dashboard/Pages/Settings/index.html">Settings</a></li>
-                        <li><a class="dropdown-item" href="../../Pages/Login/index.html"> Exit </a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
+    <div class="right_item_nav">
+        <a href="Pages/Kids/index.html">INFANTIL</a>
+        <a href="#"><i class="fas fa-gift"></i></a>
+        <a href="#"><i class="fas fa-bell"></i><sup class="notification_tot"></sup></a>
     </div>
+</div>
 
-    <!-- Main -->
-    <main>
-        <div class="home-page-dashboard">
-            <img src="../../assets/dashboard/heroimage.png" alt="" />
-        </div>
+<!-- HERO -->
+<div class="home-page-dashboard">
+    <img src="../../assets/dashboard/heroimage.png" alt="Hero Image">
+    <div class="hero-text">
         <span class="name">DARK</span>
         <span class="info">2017 | 16 | 3 Season | Police Serie</span>
-        <span class="sinopse_movie_landing">
+        <p class="sinopse_movie_landing">
             Four families embark on a desperate search for answers when a son disappears amid a mystery involving three generations.
-        </span>
-        <a href="Pages/MediaDetails/index.html?id=70523&type=tv">
-            <button class="btn_play" id="btn_play"><i class="fas fa-play"></i> &nbsp; Join</button>
-        </a>
-        <img src="../../../src/assets/dashboard/serie_icon.png" class="img_serie_name" />
+        </p>
+        <button class="btn_play"><i class="fas fa-play"></i> Join</button>
+        <img src="../../../src/assets/dashboard/serie_icon.png" class="img_serie_name">
+    </div>
+</div>
 
-        <div class="more_movies">
-            <div class="row_01_popular">
-                <h1 class="title_second_row">Popular Series</h1>
-                <div class="buttons_tv_scroll">
-                    <button id="button_scroll_left_01"><i class="fas fa-chevron-left"></i></button>
-                    <button id="button_scroll_right_01"><i class="fas fa-chevron-right"></i></button>
-                </div>
-                <div class="tv01">
-                    <ul class="row01_tv_popular" id="row01_tv_popular"></ul>
-                </div>
-            </div>
-            <div class="row_02_popular">
-                <h1 class="title_second_row">Recent Films</h1>
-                <div class="buttons_movies_scroll">
-                    <button id="button_scroll_left_02"><i class="fas fa-chevron-left"></i></button>
-                    <button id="button_scroll_right_02"><i class="fas fa-chevron-right"></i></button>
-                </div>
-                <div class="movies02">
-                    <ul class="row02_movies_popular" id="row02_movies_popular"></ul>
-                </div>
-            </div>
-        </div>
-    </main>
+<!-- ROWS -->
+<div class="more_movies">
+    <h2>Popular Series</h2>
+    <ul class="row_movies" id="row01_tv_popular"></ul>
 
-    <!-- Firebase -->
-    <script type="module" src="../../../firebase.js"></script>
-    <script type="module" src="../../Pages/Dashboard/js/authsession.js"></script>
+    <h2>Recent Films</h2>
+    <ul class="row_movies" id="row02_movies_popular"></ul>
+</div>
 
-    <!-- Spinner JS -->
-    <script>
-        $(window).on("load", function() {
-            $(".loading").fadeOut(500, function() {
-                $(this).remove();
-                $("body").removeClass("scroll-hidden");
-            });
-        });
-    </script>
+<!-- SCRIPTS -->
+<script>
+$(window).on("load", function() {
+    $(".loading").fadeOut(500, function() {
+        $(this).remove();
+        $("body").removeClass("scroll-hidden");
+    });
+});
+</script>
+
 </body>
 </html>
